[tool.black]
line-length = 79

# https://black.readthedocs.io/en/stable/compatible_configs.html
[flake8]
max-line-length = 79
max-complexity = 18
extend-ignore = ['E203', 'E501', 'W503']

# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[mypy]
# strict = 1
ignore_missing_imports = 1

[tool.poetry]
name = "reinforce"
version = "0.1.0"
description = ""
authors = ["Sotetsu KOYAMADA <koyamada-s@sys.i.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
gym = "^0.18.3"
torch = "^1.9.0"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
blackdoc = "^0.3.4"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
